2006-03-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c: Fix duplicate account name
	checking bug that prevented editing account info.

2006-03-04  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/glade/account.glade: set automatic policy on some
	  scrolledwindows in the account dialog

	* glade-fixup: 
	* src/gnome/glade/account.glade: 
	* src/gnome/glade/budget.glade: 
	* src/gnome/glade/price.glade: 
	* src/gnome/glade/print.glade: 
	  remove add_tearoffs property from GtkComboBoxes

	* Hello_ChangeLog

2006-03-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c:
	* lib/glib26/gkeyfile.c:
	* lib/glib26/gutils26.[ch]: Make g_strv_length available outside
	of the gkeyfile compatability library.

2006-03-04  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/schemas/Makefile.am (install-data-local)
	* src/gnome-utils/schemas/Makefile.am (install-data-local)
	* src/business/business-gnome/schemas/Makefile.am (install-data-local)
	* src/import-export/hbci/schemas/Makefile.am (install-data-local)
	* src/import-export/schemas/Makefile.am (install-data-local):
	Modify schema mkdirs by DESTDIR for packaging.

	* src/gnome/glade/sched-xact.glade: Fix selection mode on
	transaction reminder and obsolete SX lists.

	* src/gnome/ui/icon-split.png: 
	* src/gnome/ui/icon-transfer.png: 
	Add split, transfer icons provided by Andrew Duggan
	<cmkrnl@speakeasy.net>.
	
	* src/gnome-utils/gnc-dir.h.in: 
	* src/gnome-utils/Makefile.am (gnc-dir.h):
	* src/gnome/gnc-plugin-page-register.c
	(gnc_plugin_page_register_actions)
	(gnc_plugin_page_register_class_init): Add registration, use of
	gnucash-provided (split, transactions) icons.  Bug#327647.

	* src/gnome-utils/gnc-menu-extensions.c (gnc_extension_path):
	Fixes to memory deallocation suggested by Phil Longstaff
	<plongstaff@newearth.org>.

2006-03-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-preferences.c: