@@ -1,5 +1,15 @@
 2006-03-04  David Hampton  <hampton@employees.org>
 
+	* src/gnome-utils/gnc-tree-model-account.c:
+	* src/engine/Account.c:
+	* src/engine/Group.c: Rework the events generated by the
+	account/group files and consumed by the GncTreeModelAccount.
+	Should eliminate all g_value_inset and g_object_set_property
+	warnings related to changes in the account tree.
+
+	* src/engine/Transaction.c:
+	* src/engine/gnc-event.h: Rename a data structure field.
+
 	* src/gnome-utils/dialog-account.c: Fix duplicate account name
 	checking bug that prevented editing account info.
 
